@@ -188,6 +188,7 @@ Chronological list of authors
   - Rishabh Shukla  
   - Manish Kumar
   - Aditi Tripathi
+  - Sukeerti T
 
 External code
 -------------
